--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app
+      - ./app:/app/app
     depends_on:
       - postgres
     environment:
@@ -17,6 +17,7 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=coding_challenges
       - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
     networks:
       - app-network
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
